external-crates/move/crates/move-compiler/tests/move_2024/naming/use_fun_unbound.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/naming/use_fun_unbound.move:2:13
  │
2 │     use fun id as u64.id;
  │             ^^
  │             │
  │             Could not resolve the name 'id'
  │             Did you mean: 't'
3 │ 
4 │     fun t(x: u64): u64 {
  │         - Similarly named defintion found here

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/naming/use_fun_unbound.move:5:17
  │
4 │     fun t(x: u64): u64 {
  │         - Similarly named defintion found here
5 │         use fun x as u64.x;
  │                 ^
  │                 │
  │                 Could not resolve the name 'x'
  │                 Did you mean: 't'

error[E03005]: unbound unscoped name
   ┌─ tests/move_2024/naming/use_fun_unbound.move:10:17
   │
10 │         use fun $f as u64.f;
   │                 ^^ Unbound function '$f' in current scope
